external-crates/move/crates/move-compiler/tests/move_2024/naming/positional_pack_of_non_positional_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03013]: positional call mismatch
  ┌─ tests/move_2024/naming/positional_pack_of_non_positional_struct.move:6:18
  │
2 │     public struct Foo { field: u64 } has copy, drop;
  │                   --- 'Foo' is declared here
  ·
6 │         let _x = Foo(0);
  │                  ^^^^^^ Invalid struct instantiation. Named struct declarations require named instantiations

error[E03010]: unbound field
  ┌─ tests/move_2024/naming/positional_pack_of_non_positional_struct.move:6:18
  │
6 │         let _x = Foo(0);
  │                  ^^^^^^ Unbound field '0' in '0x42::M::Foo'

error[E04016]: too few arguments
  ┌─ tests/move_2024/naming/positional_pack_of_non_positional_struct.move:6:18
  │
6 │         let _x = Foo(0);
  │                  ^^^^^^ Missing argument for field 'field' in '0x42::M::Foo'
